--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">短信净化器</string>
+    <string name="app_name">垃圾短信举报</string>
     <string name="intercepted_list">已拦截短信</string>
+    <string name="sms_list">短信列表</string>
     <string name="black_list">黑名单</string>
     <string name="white_list">白名单</string>
+    <string name="key_word">关键词</string>
+    <string name="setting">设置</string>
+    <string name="add">添加</string>
 </resources>
